1998-09-29  Ben Elliston  <bje@cygnus.com>

	* acgeneral.m4 (AC_SEARCH_LIBS): New macro. Searches a series of
	libraries for a given function. Contributed by Jim Blandy
	<jimb@cygnus.com>.
	(AC_TRY_LINK_FUNC): New macro. Again, from Jim.

1998-09-28  Ben Elliston  <bje@cygnus.com>

	* config.guess: Detect multiprocessor DC/OSx running on Pyramid
	MIServer machines.  Contributed by Graham K. Jenkins
	<Graham.K.Jenkins@corpmail.telstra.com.au>.

	* acgeneral.m4 (AC_CHECK_PROG): Fix a bug if the supplied path
	contains colons. This was observed with some versions of NetBSD
	`sh' and some versions of `bash'.
	(AC_PATH_PROG): Likewise. Contributed by Tom Yu <tlyu@mit.edu>.

1998-09-27  Ben Elliston  <bje@cygnus.com>

	* Makefile.in (all): Generate frozen .m4 files at build time.
	(install): Do not freeze .m4 files. Install pre-frozen .m4f files
	using $(INSTALL_DATA).
	(.m4.m4f): Freeze files if m4 supports stored internal state.
	Contributed by Karl Heuer <kwzh@gnu.org>.
	
	* install-sh: Import latest version from the FSF.

	* mkinstalldirs: Likewise.

	* config.guess: Apply the sysconf(2) test to HP 9000/600-series,
	9000/802, 9000/804 and 9000/892 machines.  Contributed by Pavel
	Roskin <pavel.roskin@ecsoft.co.uk>.
	Detect UnixWare 7.  Contributed by Paul Gampe <paulg@apnic.net>.

	* acspecific.m4 (AC_PROG_INSTALL): Substitute `INSTALL_SCRIPT'.
	Contributed by Franc,ois Pinard <pinard@iro.umontreal.ca>.
	(AC_C_STRINGIZE): New macro to test the availability of the
	stringizing operator in the C preprocessor. Contributed by Arnold
	Robbins <arnold@gnu.org> on behalf of the GNU AWK project.

	* acconfig.h (HAVE_STRINGIZE): Add for the AC_C_STRINGIZE macro.
		
	* testsuite/Makefile.in (check): If DejaGNU is not installed,
	print a warning and skip the `dejacheck' target (which will fail).
	(site.exp): Use tests to guard commands from generating error
	messages if `site.exp' or `site.bak' do not exist. Contributed by
	Karl Heuer <kwzh@gnu.org>.